@@ -1,3 +1,7 @@
+2011-03-31  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* g++.dg/other/i386-9.C: New test.
+
 2011-03-30  Jason Merrill  <jason@redhat.com>
 
 	* g++.dg/cpp0x/regress/error-recovery1.C: New.
