@@ -1,3 +1,9 @@
+2011-03-31  Eric Botcazou  <ebotcazou@adacore.com>
+
+	PR target/48142
+	* config/i386/i386.c (ix86_adjust_stack_and_probe): Differentiate
+	frame-related from frame-unrelated adjustments to the stack pointer.
+
 2011-03-30  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backport from mainline
